update file structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Getting a Backbone</title>
-        <link rel="stylesheet" href="todos.css" />
+        <link rel="stylesheet" href="src/css/todos.css" />
     </head>
     <body>
         <div id="todoapp">
@@ -32,20 +32,12 @@
 
         <div id="instructions">Double-click to edit a todo.</div>
 
-        <div id="credits">
-            Created by
-            <br />
-            <a href="http://jgn.me/">J&eacute;r&ocirc;me Gravel-Niquet</a>.
-            <br />Rewritten by:
-            <a href="https://github.com/tastejs/todomvc">TodoMVC</a>.
-        </div>
-
-        <script src="json2.js"></script>
-        <script src="jQuery.3.6.0.js"></script>
-        <script src="underscore.1.13.2.js"></script>
-        <script src="backbone.1.4.1.js"></script>
-        <script src="backbone.localStorage.js"></script>
-        <script src="todos.js"></script>
+        <script src="lib/js/json2.js"></script>
+        <script src="lib/js/jQuery.3.6.0.js"></script>
+        <script src="lib/js/underscore.1.13.2.js"></script>
+        <script src="lib/js/backbone.1.4.1.js"></script>
+        <script src="src/js/backbone.localStorage.js"></script>
+        <script src="src/js/todos.js"></script>
 
         <!-- Templates -->
 
